--- a/hashtag-view/src/main/res/values/attrs.xml
+++ b/hashtag-view/src/main/res/values/attrs.xml
@@ -18,7 +18,9 @@
         <attr name="tagBackground" format="color|reference"/>
         <attr name="tagForeground" format="color|reference"/>
         <attr name="tagDrawableLeft" format="reference"/>
+        <attr name="tagSelectedDrawableLeft" format="reference"/>
         <attr name="tagDrawableRight" format="reference"/>
+        <attr name="tagSelectedDrawableRight" format="reference"/>
         <attr name="tagDrawablePadding" format="dimension"/>
         <attr name="tagMargin" format="dimension"/>
         <attr name="tagPaddingLeft" format="dimension"/>
