--- a/sample/src/main/res/layout/fragment_styling_sample.xml
+++ b/sample/src/main/res/layout/fragment_styling_sample.xml
@@ -93,6 +93,30 @@
                     app:tagPaddingTop="@dimen/padding_vertical"
                     app:tagTextColor="#E5E5E5"/>
 
+                <FrameLayout style="@style/Section.Container">
+
+                    <TextView
+                        style="@style/Section.Text"
+                        android:text="@string/section_style_selection_drawables"/>
+                </FrameLayout>
+
+                <com.greenfrvr.hashtagview.HashtagView
+                    android:id="@+id/hashtags5"
+                    style="@style/HashtagView"
+                    app:rowGravity="center"
+                    app:rowMode="wrap"
+                    app:selectionMode="true"
+                    app:tagBackground="@drawable/item_bg_1"
+                    app:tagDrawablePadding="4dp"
+                    app:tagDrawableRight="@drawable/ic_close_white_18dp"
+                    app:tagForeground="@drawable/flat_button_light"
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="8dp"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagSelectedDrawableRight="@drawable/ic_done_white_18dp"
+                    app:tagTextColor="#E5E5E5"/>
+
                 <include layout="@layout/layout_buttons"/>
 
             </LinearLayout>
